# PyMicroservicesRedisKafka

./: .env  .env.dev  README.md  docker-compose.yml
services/currency/: Dockerfile  pyproject.toml
services/currency/currency/: controller.py  main.py  middlewares.py  settings.py
services/currency/currency/spiders/: currency_v1.py
services/notify/: Dockerfile  pyproject.toml
services/notify/app/: main.py  settings.py
services/web/: Dockerfile  pyproject.toml
services/web/app/: main.py  producer.py  schemas.py  settings.py
